user-charts/admin-test2/templates/network/admin-webapp-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webapp
spec:
  parentRefs:
    - name: test2-cilium-gateway
      sectionName: https
      namespace: cilium
  hostnames:
    - "www.192.168.100.241.sslip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: webapp
          port: 80
